--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 @use "sass:color";
 @import "fonts.scss";
 $background-color: #121212; // Couleur de fond sombre
-$menu-color: #e3f5b9; // Couleur pour le menu
+$menu-color: #21231c; // Couleur pour le menu
 $important-color: #03DAC6; // Couleur d'accent
 $red: #c04d4d; // Reste inchangé
 
